<?xml version="1.0" encoding="UTF-8"?>
<resources>

    /*--- GENERAL
    <string name="app_name" translatable="false">RutasLima</string>
    <string name="facebook_app_id">2394266184123787</string>
    <string name="fb_login_protocol_scheme">fb2394266184123787</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYXZhbmNlc3RlY25vbG9naWNvcyIsImEiOiJjazN1b3R1MmswM3psM3Fvd2xudDM3NmdrIn0.MkMCDtDKevC9Uq3rwfZekw</string>
    <string name="new_location">fff</string>


    /*--- SPLASH
    <string name="splash_first_line">Ven a</string>
    <string name="splash_second_line">conocer</string>
    <string name="splash_thirth_line">Lima</string>
    <string name="splash_button_begin">Empezar</string>


    /*--- GENERAL
    <string name="main_request_permision_storage">Debe aceptar para subir su foto</string>
    <string name="main_add_calendar">Agregado a Calendario</string>
    <string name="main_message_must_add_calendar">No se puede añadir evento por denegar permiso a calendario</string>


    /*--- SECONDS TO OFFERT
    <string name="seconds_first_line">Unos segundos</string>
    <string name="seconds_second_line">para ofrecerte</string>
    <string name="seconds_thirth_line">lo mejor de Lima</string>
    <string name="seconds_text_view_viajero">Eres un viajero que busca...</string>
    <string name="seconds_text_view_time">¿Cuánto tiempo te quedas?</string>
    <string name="seconds_apply">Aplicar</string>
    <string name="seconds_select_at_lest_one">Seleccione al menos un interes y/o número de días</string>


    /*--- LOGIN SOCIAL MEDIA
    <string name="login_first_line">Ingresa para</string>
    <string name="login_second_line">ofrecerte</string>
    <string name="login_thirth_line">lo mejor</string>
    <string name="login_fourth_line">de Lima</string>
    <string name="login_button_google">Continuar con Google</string>
    <string name="login_button_facebook">Continuar con Facebook</string>
    <string name="login_label_registro">Registro</string>
    <string name="login_label_iniciar_sesion">Iniciar Sesión</string>
    <string name="login_chbx_politicas_privacidad">Acepto la politica de privacidad</string>
    <string name="login_chbx_terminos">Acepto los términos y condiciones</string>

    <string name="login_error_firebase_google">Error al conectarse a Firebase con Google</string>
    <string name="login_error_firebase_fb">Error al conectarse a Firebase con Facebook</string>
    <string name="login_errore_google">Error al conectarse a Google</string>
    <string name="login_acept_terms">Acepte Términos y Condiciones</string>


    /*--- LOGIN EMAIL
    <string name="login_email_iniciar_sesion">Iniciar Sesión</string>
    <string name="login_email_edit_text_email">Tu correo</string>
    <string name="login_email_edit_text_pass">Tu contraseña</string>
    <string name="login_email_edit_text_forgot_pass">¿Olvidaste tu contraseña?</string>
    <string name="login_email_continue">Ingresar</string>


    /*--- REGISTER USER
    <string name="register_user_tittle">Regístrate</string>
    <string name="register_user_email">Tu correo</string>
    <string name="register_user_pass">Tu contraseña</string>
    <string name="register_user_names">Nombres y Apellidos</string>
    <string name="register_user_country">País</string>
    <string name="register_user_birthdate">F. de Nacimiento</string>
    <string name="register_user_gender">Género</string>
    <string name="register_user_continue">Continuar</string>


    /*--- FORGOT PASSWORD
    <string name="forgot_pass_first_line">Olvide mi</string>
    <string name="forgot_pass_second_line">Contraseña</string>
    <string name="forgot_pass_fourth_line">Ingresa tu correo y te</string>
    <string name="forgot_pass_fifth_line">enviaremos tu contraseña</string>
    <string name="forgot_pass_email">Tu correo</string>
    <string name="forgot_pass_recovery_pass">Recuperar Contraseña</string>


    /*--- VALIDATION CODE
    <string name="validation_tittle">Validación</string>
    <string name="validation_first_line">Se te envió un código al  correo electrónico para terminar el registro.</string>
    <string name="validation_second_line">Ingresa aqui el código enviado.</string>
    <string name="validation_can_get_code">¿No te llego el código?</string>
    <string name="validation_user_continue">Continuar</string>
    <string name="validation_code_sent">Código enviado</string>
    <string name="validation_code_correct">Código correcto</string>


    /*--- COMPLETE INFO
    <string name="complete_info_first_line">Completa</string>
    <string name="complete_info_second_line">tus datos</string>
    <string name="complete_info_email">Tu correo</string>
    <string name="complete_info_names">Nombres y Apellidos</string>
    <string name="complete_info_country">País</string>
    <string name="complete_info_birthdate">F. de Nacimiento</string>
    <string name="complete_info_gender">Género</string>
    <string name="complete_info_continue">Continuar</string>
    <string name="complete_info_validDay">Ingrese un día válido</string>
    <string name="complete_info_DayError">Día inválido</string>
    <string name="complete_info_validMonth">Ingrese un mes válido</string>
    <string name="complete_info_MonthError">Mes inválido</string>
    <string name="complete_info_validYear">Ingrese un año válido</string>
    <string name="complete_info_YearError">Año inválido</string>
    <string name="complete_info_validInfo">Completa los datos correctamente</string>
    <string name="complete_info_EmailError">Email inválido</string>


    /*--- HOME
    <string name="home_search">¿Qué deseas hacer?</string>
    <string name="home_distrits_tittle">Distritos y barrios</string>
    <string name="home_distrits_subtittle">Descubre lo mejor de la ciudad</string>
    <string name="home_places_tittle">Imperdibles</string>
    <string name="home_places_subtittle">Elige una de las rutas que tenemos</string>
    <string name="home_routes_tittle">Rutas temáticas</string>
    <string name="home_routes_subtittle">Recorre la ciudad a tu manera</string>
    <string name="home_places_all">Ver todos</string>

    /*--- HOME LOGGED
    <string name="home_logged_search">¿Qué buscas en Lima?</string>
    <string name="home_logged_distrits_tittle">Distritos y barrios</string>
    <string name="home_logged_distrits_subtittle">Descubre lo mejor de la ciudad</string>
    <string name="home_logged_places_tittle">Imperdibles</string>
    <string name="home_logged_places_subtittle">Elige una de las rutas que tenemos</string>
    <string name="home_logged_routes_tittle">Rutas para ti</string>
    <string name="home_logged_routes_subtittle">Recorre la ciudad a tu manera</string>
    <string name="home_logged_places_all">Ver todos</string>


    /*--- FAVORITES
    <string name="favorites_tittle">Lugares Favoritos</string>
    <string name="favorites_no_favorites">No tiene lugares favoritos</string>
    <string name="favorites_no_favorites_subtittle">Añade los lugares que mas te atraigan tocando el icono del corazón</string>


    /*--- EVENTS
    <string name="event_tittle">Eventos</string>
    <string name="event_item_more">Ver más</string>


    /*--- ACCOUNT
    <string name="account_welcome">Bienvenido</string>
    <string name="account_profile">Editar Perfil</string>
    <string name="account_preference">Preferencias</string>
    <string name="account_rate_app">Valora la app</string>
    <string name="account_logout">Cerrar Sesión</string>
    <string name="account_image_updated">Imagen actualizada</string>


    /*--- PLACE DETAIL
    <string name="place_detail_go_map">Ir</string>
    <string name="place_detail_info">Información</string>
    <string name="place_detail_share">Compártelo</string>

    /*--- DISTRIT DETAIL
    <string name="distrit_detail_info">Imperdibles</string>


    /*--- PREFERENCE
    <string name="preference_tittle">Preferencias</string>
    <string name="preference_viajero">Eres un viajero que busca...</string>
    <string name="preference_time">¿Cuánto tiempo te quedas?</string>
    <string name="preference_apply">Aplicar</string>


    /*--- EDIT PROFILE
    <string name="edit_profile_tittle">Editar Perfil</string>
    <string name="edit_profile_email">Tu correo</string>
    <string name="edit_profile_pass">Tu contraseña</string>
    <string name="edit_profile_names">Nombres y Apellidos</string>
    <string name="edit_profile_country">País</string>
    <string name="edit_profile_birthdate">F. de Nacimiento</string>
    <string name="edit_profile_gender">Género</string>
    <string name="edit_profile_continue">Actualizar</string>
    <string name="edit_profile_info_updated">Se actualizaron sus datos</string>


    /*--- LOGOUT
    <string name="logout_tittle">¿Estás seguro de cerrar la sesión?</string>
    <string name="logout_no">Ahora no</string>
    <string name="logout_yes">Cerrar Sesión</string>


    /*--- RATE APP
    <string name="rate_app_tittle">¿Te gusta la app?</string>
    <string name="rate_app_subtittle_first">Si tu respuesta es SI,recomiendanos y</string>
    <string name="rate_app_subtittle_second">calificanos con 5 estrellas</string>
    <string name="rate_app_continue">Valorar ya</string>


    /*--- NEW DATA
    <string name="new_data_message">Se ha actualizado el contenido de la aplicación, por favor reinicie RutasLima para continuar</string>
    <string name="new_data_button_message">OK</string>


    /*--- FILTER
    <string name="filter_tittle">Filtros</string>
    <string name="filter_subtittle_first">Por Interés</string>
    <string name="filter_subtittle_thirth">Por Tiempo</string>
    <string name="filter_subtittle_second">Por Distrito</string>
    <string name="filter_apply">Aplicar</string>


    /*--- EVENT_DETAIL
    <string name="event_detail_add_calendar">Separa mi agenda</string>


    /*--- SEARCH FRAGMENT
    <string name="search_fragment_edit_text_search">¿Qué deseas hacer?</string>
    <string name="search_fragment_text_view_recently_searchs">Búsquedas recientes</string>
    <string name="search_fragment_text_view_suggested_searchs">Búsquedas sugeridas</string>
    <string name="search_fragment_text_view_cancel">Cancelar</string>


    <string name="filter_label_tittle">Filtros: 2</string>
    <string name="filter_label_by_interest">Por Interes</string>
    <string name="filter_label_by_distrit">Por Interes</string>
    <string name="filter_button_historia">Historia</string>
    <string name="filter_button_cultura">Cultura</string>
    <string name="filter_button_arte">Arte</string>
    <string name="filter_button_gastronomia">Gastronomía</string>
    <string name="filter_button_aventura">Gastronomía</string>
    <string name="filter_button_miraflores">Miraflores</string>
    <string name="filter_button_pueblo_libre">Pueblo Libre</string>
    <string name="filter_button_barranco">Barranco</string>
    <string name="filter_button_san_isidro">San Isidro</string>
    <string name="filter_button_cercado_de_lima">Cercado de Lima</string>
    <string name="filter_button_apply">Aplicar</string>


    <string name="home_search_field">¿Qué deseas hacer?</string>
    <string name="home_tittle_distrits">Distritos y Barrios</string>
    <string name="home_subtittle_distrits">Descubre lo mejor de la ciudad</string>
    <string name="home_tittle_imperdibles">Imperdibles</string>
    <string name="home_subtittle_imperdibles">Elige una de las rutas que tenemos</string>
    <string name="home_tittle_rutas_tematicas">Rutas Temáticas</string>
    <string name="home_subtittle_rutas_tematicas">Recorre la ciudad a tu manera</string>
    <string name="home_button_ver_todos">Ver todos</string>


    <string name="distrit_detail_go_map">Ir a mapa</string>
    <string name="distrit_detail_tittle_imperdibles">Imperdibles</string>
    <string name="distrit_detail_button_ver_todos">Ver todos</string>
    <string name="title_activity_maps_prueba">Map</string>
    <string name="title_activity_maps">Map</string>


</resources>

