<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".presentation.ui.activities.ValidationCodeActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/botonback" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="11.5">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:orientation="vertical"
                android:paddingTop="0dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/llInfoContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:orientation="vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp">


                        <TextView
                            android:id="@+id/tvTittle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:layout_marginTop="0dp"
                            android:fontFamily="@font/helveticaneu_bold"
                            android:text="@string/forgot_pass_first_line"
                            android:textColor="@color/primaryLabelColor"
                            android:textSize="@dimen/text_view_height" />

                        <TextView
                            android:id="@+id/tvTittle2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:layout_marginTop="0dp"
                            android:fontFamily="@font/helveticaneu_bold"
                            android:text="@string/forgot_pass_second_line"
                            android:textColor="@color/primaryLabelColor"
                            android:textSize="@dimen/text_view_height" />


                        <TextView
                            android:id="@+id/tvSubTittle1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="25dp"
                            android:fontFamily="@font/helveticaneuelight"
                            android:text="@string/forgot_pass_fourth_line"
                            android:textColor="@color/black"
                            android:textSize="18dp" />

                        <TextView
                            android:id="@+id/tvSubTittle2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:layout_marginTop="0dp"
                            android:layout_marginRight="25dp"
                            android:fontFamily="@font/helveticaneuelight"
                            android:text="@string/forgot_pass_fifth_line"
                            android:textColor="@color/black"
                            android:textSize="18dp" />


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tiEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginRight="40dp"
                            android:backgroundTint="@android:color/black"
                            android:theme="@style/Theme.App.Base"
                            app:errorEnabled="true"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                            <com.google.android.material.textfield.TextInputEditText

                                android:id="@+id/etEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/helveticaneuelight"
                                android:hint="@string/forgot_pass_email"
                                android:lines="1"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/register_labels"
                                android:textSize="18sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">


                <ImageView
                    android:id="@+id/ivRecoveryPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/shape_home_filter_button_apply"
                    android:textColor="@color/white"
                    android:textSize="16dp" />


                <TextView
                    android:id="@+id/tvContinue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/helveticaneuelight"
                    android:text="@string/forgot_pass_recovery_pass"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>