<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/shape_distrit_info"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingTop="15dp"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/ivClose"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/cancel"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="10"
                android:orientation="vertical">




                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/helveticaneu_bold"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/primaryLabelColor"
                    android:textSize="23dp" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/helveticaneuelight"
                    android:gravity="center"
                    android:text="@string/new_data_message"
                    android:textColor="@color/subtititlecolor"
                    android:textSize="16dp" />

                <RelativeLayout
                    android:id="@+id/rlContinue"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/shape_home_filter_button_apply"
                    android:padding="5dp"
                    android:textSize="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/helveticaneuemedium"
                            android:text="@string/new_data_button_message"
                            android:textColor="@color/white"
                            android:textSize="17sp" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>