<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:padding="2dp">


            <LinearLayout
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btnMore"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/itemTditle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/helveticaneu_bold"
                    android:text="@string/favorites_tittle"
                    android:textColor="@color/primaryLabelColor"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/itemSdubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:text="Lorempsun Lorempsun"
                    android:textColor="@color/subtititlecolor"
                    android:textSize="15sp" />

            </LinearLayout>


        </RelativeLayout>



        <LinearLayout
            android:id="@+id/llNoFavorites"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nofavorite"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorites_no_favorites"
                android:textSize="22dp"
                android:fontFamily="@font/helveticaneuemedium"/>

            <TextView
                android:fontFamily="@font/helveticaneuelight"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorites_no_favorites_subtittle"/>


        </LinearLayout>





        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/rvFavorites"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:padding="10dp">






                </LinearLayout>




            </LinearLayout>


        </ScrollView>


    </LinearLayout>

</LinearLayout>